<resources>
    <string name="app_name">IoT</string>
    <string name="login">Login</string>
    <string name="iot_console_heading">Welcome to IoT Console</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_up">Sign up</string>
    <string name="phone">Phone</string>
    <string name="username">Username</string>
    <string name="retype_password">Retype Password</string>
    <string name="register">Register</string>
    <string name="devices">Devices</string>
    <string name="enter_no_of_devices_in_your_home">Enter no. of devices for IoT in your home.</string>
    <string name="add_device">Add Device</string>
    <string name="device_name">Device Name</string>
    <string name="enter_device_name">Enter device name.</string>
    <string name="logout">Logout</string>
    <string name="Open">Open Drawer</string>
    <string name="Close">Close Drawer</string>
    <string name="manage_devices">Manage Devices</string>
</resources>