<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:elevation="10dp"
        android:background="@drawable/header_register"
        android:theme="@style/ToolbarTheme" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:elevation="10dp"
        android:text="@string/sign_up"
        android:textColor="@color/colorPurple"
        android:textSize="20sp"
        android:textStyle="bold"
        android:transitionName="login" />

    <ImageView
        android:id="@+id/circle2"
        android:layout_width="182dp"
        android:layout_height="182dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-87dp"
        android:layout_marginBottom="-40dp"
        android:src="@drawable/circle" />

    <ImageView
        android:id="@+id/circleTes"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-50dp"
        android:src="@drawable/circlet" />

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:id="@+id/rlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:id="@+id/rlcv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp">
                    <TextView
                        android:id="@+id/tvphone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="@string/phone"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:autofillHints="@string/phone"
                        android:id="@+id/etphone"
                        android:hint="@string/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvphone"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:drawablePadding="30dp"
                        android:inputType="phone"
                        android:padding="5dp" />
                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/etphone"
                        android:layout_margin="15dp"
                        android:text="@string/email"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:hint="@string/email"
                        android:id="@+id/etEmail"
                        android:autofillHints="@string/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvEmail"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:drawablePadding="30dp"
                        android:inputType="textEmailAddress"
                        android:padding="5dp" />


                    <TextView
                        android:id="@+id/tvUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/etEmail"
                        android:layout_margin="15dp"
                        android:text="@string/username"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etUsername"
                        android:hint="@string/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvUsername"
                        android:layout_marginLeft="15dp"
                        android:autofillHints="@string/username"
                        android:layout_marginRight="15dp"
                        android:drawablePadding="30dp"
                        android:inputType="text"
                        android:padding="5dp" />

                    <TextView
                        android:id="@+id/tvPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/etUsername"
                        android:layout_margin="15dp"
                        android:text="@string/password"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:hint="@string/password"
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvPassword"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:autofillHints="@string/password"
                        android:drawablePadding="30dp"
                        android:inputType="textPassword"
                        android:padding="5dp" />

                    <TextView
                        android:id="@+id/tvRePassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/etPassword"
                        android:layout_margin="15dp"
                        android:text="@string/retype_password"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:autofillHints="@string/password"
                        android:hint="@string/password"
                        android:id="@+id/etRePassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvRePassword"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:drawablePadding="30dp"
                        android:inputType="textPassword"
                        android:padding="5dp" />
                    <TextView
                        android:id="@+id/tvDevices"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/etRePassword"
                        android:layout_margin="15dp"
                        android:text="@string/devices"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:hint="@string/enter_no_of_devices_in_your_home"
                        android:id="@+id/etDevices"
                        android:autofillHints="@string/devices"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvDevices"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:drawablePadding="30dp"
                        android:inputType="number"
                        android:padding="5dp" />
                    <Button
                        android:id="@+id/btLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bt_uisquare"
                        android:layout_below="@+id/etDevices"
                        android:layout_marginTop="5dp"
                        android:text="@string/register"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>