<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_add_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardElevation="4dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="35dp">
                <TextView
                    android:id="@+id/tvDevicename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/device_name"
                    android:textColor="@color/colorPurple"
                    android:textSize="14sp"
                    android:textStyle="bold" />
                <EditText
                    android:hint="@string/enter_device_name"
                    android:id="@+id/etdevicename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvDevicename"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:drawablePadding="30dp"
                    android:inputType="text"
                    android:padding="10dp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/cv_add_device"
            android:layout_alignEnd="@+id/cv_add_device"
            android:layout_alignBottom="@+id/cv_add_device"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="-20dp"
            android:elevation="10dp">
            <Button
                android:id="@+id/btnadddevice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/bt_uisquare"
                android:text="@string/add_device"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>