<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="VectorDrawableCompat"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="45dp"
        android:text="@string/iot_console_heading"
        android:textColor="@color/colorAccent"
        android:textSize="17sp" />
    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDesc"
        android:layout_alignStart="@+id/tvDesc"
        android:text="@string/login"
        android:transitionName="login"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold" />
    <ImageView
        android:id="@+id/circle1"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:transitionName="image"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-100dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/circlet" />
    <ImageView
        android:id="@+id/circle2"
        android:layout_width="182dp"
        android:layout_height="182dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-90dp"
        android:layout_marginBottom="-40dp"
        android:src="@drawable/circle" />
    <ImageView
        android:id="@+id/circle3"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-50dp"
        android:layout_marginBottom="-60dp"
        android:layout_toStartOf="@id/circle2"
        android:src="@drawable/circlet" />
    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="32dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp">
            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardElevation="4dp">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="35dp">
                    <TextView
                        android:id="@+id/tvUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="@string/email"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                    <EditText
                        android:id="@+id/etUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvUsername"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:drawableEnd="@drawable/ic_person"
                        android:drawablePadding="30dp"
                        android:inputType="text"
                        android:padding="10dp" />
                    <TextView
                        android:id="@+id/tvPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/etUsername"
                        android:layout_margin="15dp"
                        android:text="@string/password"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvPassword"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:drawableEnd="@drawable/ic_lock"
                        android:drawablePadding="30dp"
                        android:inputType="textPassword"
                        android:padding="10dp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <RelativeLayout
                android:id="@+id/rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:transitionName="circleTes"
                android:layout_alignTop="@+id/cv"
                android:layout_alignRight="@+id/cv"
                android:layout_marginTop="-20dp"
                android:layout_marginRight="-20dp"
                android:elevation="10dp">
                <ImageButton
                    android:id="@+id/btRegister"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/circle"
                    android:src="@drawable/ic_add" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/cv"
                android:layout_alignRight="@+id/cv"
                android:layout_alignBottom="@+id/cv"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginBottom="-20dp"
                android:elevation="10dp">
                <Button
                    android:id="@+id/btLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bt_uisquare"
                    android:text="@string/login_button"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />
            </RelativeLayout>
            <TextView
                android:id="@+id/tvForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cv"
                android:layout_centerHorizontal="true"
                android:layout_margin="15dp"
                android:text="@string/forgot_your_password"
                android:textSize="14sp" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>